# lifetravel-agent

./: .gitignore  README.md  docker-compose.yml  itinerary_example.json  itinerary_example_roundtrip.json  run_compose.sh  trip_example.json  trip_example_roundtrip.json
agent_orchestrator/: Cargo.toml  Dockerfile  run_local.sh
agent_orchestrator/src/: cfg.rs  handlers.rs  llm.rs  main.rs  publish.rs  subscribe.rs
endpoint/: .gitignore  Cargo.toml
endpoint/src/: cfg.rs  handlers.rs  main.rs  publish.rs  subscribe.rs
endpoint_api/: Dockerfile  pyproject.toml  run_local.sh
endpoint_api/src/: cfg.py  main.py  rabbitmq_publisher.py  rabbitmq_subscriber.py
ingress_api/: Cargo.toml  Dockerfile  run_local.sh
ingress_api/src/: cfg.rs  handlers.rs  main.rs  publish.rs  subscribe.rs
inventory_flight_service/: pyproject.toml  test_amadeus_processing.py
inventory_flight_service/src/: amadeus_interval.py  amadeus_scrub.py  amadeus_sender.py  cfg.py  main.py  rabbitmq_publisher.py  rabbitmq_subscriber.py  request_processor.py  request_translator.py
inventory_flight_service/tests/: test_amadeus_scrub.py  test_flight_offer_filter.py  test_request_translator.py  test_roundtrip_split.py
inventory_hotel_service/: pyproject.toml
inventory_hotel_service/src/: amadeus_interval.py  amadeus_scrub.py  amadeus_sender.py  cfg.py  debug_messages.py  main.py  rabbitmq_publisher.py  rabbitmq_subscriber.py  request_processor.py  request_translator.py
inventory_hotel_service/tests/: test_amadeus_scrub.py  test_stays_from_flights.py
inventory_service/: .gitignore  output  pyproject.toml  test_amadeus_processing.py
inventory_service/src/: amadeus_sender.py  cfg.py  main.py  rabbitmq_publisher.py  rabbitmq_subscriber.py  request_processor.py  request_translator.py
inventory_service/src/inventory_service.egg-info/: SOURCES.txt  requires.txt  top_level.txt
inventory_service/tests/: test_request_translator.py
itinerary_composer/: pyproject.toml
itinerary_composer/src/: cfg.py  composer.py  main.py  rabbitmq_publisher.py  rabbitmq_subscriber.py
itinerary_composer/tests/: test_compose_itinerary.py  test_currency_annotation.py
itinerary_verifier/: .gitignore  pyproject.toml
itinerary_verifier/src/: cfg.py  llm_client.py  main.py  rabbitmq_publisher.py  rabbitmq_subscriber.py
nginx/conf.d/: default.conf
query_router/: pyproject.toml  run_llm_client_test.sh  test_llm_client.py
query_router/src/: cfg.py  llm_client.py  main.py  rabbitmq_router.py
ranking_service/: pyproject.toml
ranking_service/src/: cfg.py  main.py  rabbitmq_publisher.py  rabbitmq_subscriber.py  ranker.py
ranking_service/tests/: test_ranker.py
trip_composer/: .gitignore  pyproject.toml
trip_composer/src/: cfg.py  composer.py  main.py  rabbitmq_publisher.py  rabbitmq_subscriber.py
trip_composer/tests/: test_compose_trip.py  test_currency_annotation.py
