[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-service"
version = "0.1.0"
description = "Inventory service HTTP API"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12",
  "httpx",
  "uvicorn[standard]==0.34.0",
]
