[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itinerary-composer"
version = "0.1.0"
description = "Async itinerary composer microservice"
requires-python = ">=3.10"
dependencies = [
  "aio-pika",
  "aiohttp",
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
]
